--- a/o14_com.conf
+++ b/o14_com.conf
@@ -5,7 +5,6 @@ db_port = False
 db_user = odoo
 db_password = odoo
 addons_path = C:\Users\dabur\Desktop\odoo14\odoo\addons,C:\Users\dabur\Desktop\odoo14\clases_udemy
-bin_path = C:\Users\dabur\Desktop\odoo14\wkhtmltopdf
 pg_path = C:\Program Files\PostgreSQL\15\bin\
 admin_passwd = $pbkdf2-sha512$600000$AyDE2Nsb47w3ZgxByHlv7Q$dpw5AgWKfX.dbxFzh0w62BsP9ny0mVnNj2BP7go.XAFCJwcL47tLWcGBDKTHeaA0hQVZSNlC/X7gIQvKt4CnPw
-
+bin_path = C:/Program Files/wkhtmltopdf/bin
